[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui/widgets/oscilloscope.tscn" type="PackedScene" id=1]
[ext_resource path="res://theme/editor.png" type="Texture" id=2]
[ext_resource path="res://theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://ui/options/options.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/widgets/play_button.gd" type="Script" id=5]
[ext_resource path="res://main.gd" type="Script" id=6]
[ext_resource path="res://ui/instrument_designer/instruments_tab.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/pattern_editor/patterns_tab.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/wave_designer/waveforms_tab.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/menu/menu.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 96, 112, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 112, 16, 16 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ReferenceRect" type="ReferenceRect" parent="Main"]
margin_right = 1024.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )

[node name="Tabs" type="TabContainer" parent="Main"]
margin_top = 16.0
margin_right = 1024.0
margin_bottom = 536.0
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_lock_": true
}

[node name="Patterns" parent="Main/Tabs" instance=ExtResource( 8 )]
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Instruments" parent="Main/Tabs" instance=ExtResource( 7 )]
visible = false

[node name="Waveforms" parent="Main/Tabs" instance=ExtResource( 9 )]
visible = false
margin_left = 4.0
margin_top = 35.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Options" parent="Main/Tabs" instance=ExtResource( 4 )]
visible = false

[node name="Oscilloscope" parent="Main" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 536.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 64 )
bg_color = Color( 0, 0, 0.12549, 1 )
dc_line_color = Color( 1, 1, 1, 0.25098 )

[node name="Menu" parent="." instance=ExtResource( 10 )]
margin_right = 14.0

[node name="PlayControls" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PC" type="PanelContainer" parent="PlayControls"]
margin_left = 464.0
margin_right = 506.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBC" type="HBoxContainer" parent="PlayControls/PC"]
margin_left = 7.0
margin_top = 7.0
margin_right = 79.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Play" type="Button" parent="PlayControls/PC/HBC"]
margin_right = 28.0
margin_bottom = 23.0
toggle_mode = true
icon = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
accent_color = Color( 1, 2, 1, 1 )
pressed_icon = "Stop"
unpressed_icon = "Play"

[node name="PlayTrack" type="Button" parent="PlayControls/PC/HBC"]
margin_left = 44.0
margin_right = 72.0
margin_bottom = 23.0
toggle_mode = true
icon = SubResource( 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
accent_color = Color( 1, 2, 1, 1 )
pressed_icon = "Stop"
unpressed_icon = "PlayTrack"

[connection signal="tab_changed" from="Main/Tabs" to="." method="_on_tab_changed"]
[connection signal="toggled" from="PlayControls/PC/HBC/Play" to="." method="_on_Play_toggled"]
[connection signal="toggled" from="PlayControls/PC/HBC/PlayTrack" to="." method="_on_PlayTrack_toggled"]
